# CodeMate

./: .gitignore  CLAUDE.md  KRL.md  PRD.md  TODO.md  plan.md
.agent/workflows/: feature.md  test.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
codemate/: CLI.md  Cargo.toml  TESTING.md
codemate/crates/codemate-cli/: Cargo.toml
codemate/crates/codemate-cli/src/: main.rs
codemate/crates/codemate-cli/src/commands/: graph.rs  history.rs  index.rs  mod.rs  search.rs  stats.rs
codemate/crates/codemate-core/: Cargo.toml
codemate/crates/codemate-core/fixtures/: sample_go.go  sample_python.py  sample_rust.rs  sample_terraform.tf
codemate/crates/codemate-core/src/: chunk.rs  content_hash.rs  error.rs  lib.rs  project.rs  query.rs  testutils.rs
codemate/crates/codemate-core/src/service/: exporter.rs  mod.rs  models.rs
codemate/crates/codemate-core/src/storage/: mod.rs  sqlite.rs  traits.rs  utils.rs
codemate/crates/codemate-core/tests/: e2e_tests.rs
codemate/crates/codemate-embeddings/: Cargo.toml
codemate/crates/codemate-embeddings/src/: lib.rs
codemate/crates/codemate-git/: Cargo.toml
codemate/crates/codemate-git/src/: blame.rs  commit.rs  lib.rs  repository.rs
codemate/crates/codemate-parser/: Cargo.toml
codemate/crates/codemate-parser/src/: extractor.rs  lib.rs
codemate/crates/codemate-server/: Cargo.toml
codemate/crates/codemate-server/src/: handlers.rs  lib.rs  main.rs  mcp.rs  models.rs  server.rs  service.rs
codemate/scripts/: run_all_tests.py  test_mcp.py  test_module_detection.py  test_server.sh  test_server_standalone.sh
codemate/tests/: validate_all.sh  validate_langs.sh
design/: CLAUDE.md
design/decision/: ADR-storage-abstraction.md  PRD-edge-versioning.md  PRD-external-symbol-database.md  PRD-module-level-dependencies.md  PRD-similarity-edges.md  PRD-symbol-fqn-format.md
design/draft/: discussion-edge-versioning.md  discussion-external-symbol-database.md  discussion-module-level-dependencies.md  discussion-similarity-edges.md  discussion-symbol-fqn-format.md  scue-technical-specification.md  semantic-code-engine-design.md
