[workspace]
resolver = "2"
members = [
    "crates/codemate-core",
    "crates/codemate-parser",
    "crates/codemate-embeddings",
    "crates/codemate-git",
    "crates/codemate-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["CodeMate Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/codemate"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Database
rusqlite = { version = "0.31", features = ["bundled", "blob"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }

# Internal crates
codemate-core = { path = "crates/codemate-core" }
codemate-parser = { path = "crates/codemate-parser" }
codemate-embeddings = { path = "crates/codemate-embeddings" }
codemate-git = { path = "crates/codemate-git" }
