[workspace]
resolver = "2"
members = [
    "crates/codemate-core",
    "crates/codemate-parser",
    "crates/codemate-embeddings",
    "crates/codemate-git",
    "crates/codemate-cli", "crates/codemate-server",
]

[workspace.package]
version = "0.2.3"
edition = "2021"
rust-version = "1.75"
authors = ["CodeMate Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/codemate"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
async-trait = "0.1"
futures = "0.3"

# Web server
axum = "0.7"
# tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
mcp_rust_sdk = "0.1.1"

# Database
rusqlite = { version = "0.31", features = ["bundled", "blob"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"
fastembed = { version = "5", default-features = false, features = ["hf-hub-native-tls", "ort-download-binaries"] }

# CLI
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
rand = "0.9"
getrandom = "0.3"
# Utilities
chrono = { version = "0.4", default-features = false, features = ["serde", "std", "clock"] }

# Internal crates
codemate-core = { path = "crates/codemate-core" }
codemate-parser = { path = "crates/codemate-parser" }
codemate-embeddings = { path = "crates/codemate-embeddings" }
codemate-git = { path = "crates/codemate-git" }
