[package]
name = "codemate-cli"
description = "Command-line interface for CodeMate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "codemate"
path = "src/main.rs"

[dependencies]
codemate-core.workspace = true
codemate-parser.workspace = true
codemate-embeddings.workspace = true
codemate-git.workspace = true
tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
colored.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
walkdir = "2.4"
chrono = "0.4"

