[package]
name = "codemate-core"
description = "Core types, traits, and storage for CodeMate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
tracing.workspace = true
chrono.workspace = true
async-recursion = "1.1"

[dev-dependencies]
tempfile = "3.9"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
codemate-parser = { path = "../codemate-parser" }
